src/components/Insurance/Insurance.css
/* ... */
.group-31-insurance {
  align-items: flex-start;
  display: flex;
  min-width: 487px;
}
.group-81-insurance {
  align-items: center;
  align-self: center;
  display: flex;
  margin-left: 306px;
  min-width: 351px;
}
.line-insurance {
  height: 1px;
  left: 390px;
  position: absolute;
  top: 150px;
  width: 1140px;
}
.line-1-insurance {
  height: 1px;
  margin-top: 20px;
  width: 1000px;
}
.line-10-insurance {
  height: 1px;
  margin-top: 21px;
  width: 1000px;
}
.line-12-insurance {
  height: 1px;
  margin-top: 25px;
  width: 1000px;
}
.line-2-insurance {
  height: 1px;
  left: 390px;
  position: absolute;
  top: 226px;
  width: 1140px;
}
.line-3-insurance {
  height: 1px;
  left: 390px;
  position: absolute;
  top: 300px;
  width: 1140px;
}
.line-4-insurance {
  height: 1px;
  left: 390px;
  position: absolute;
  top: 376px;
  width: 1140px;
}
.line-5-insurance {
  height: 1px;
  left: 390px;
  position: absolute;
  top: 450px;
  width: 1140px;
}
.line-6-insurance {
  height: 1px;
  left: 390px;
  position: absolute;
  top: 526px;
  width: 1140px;
}
.line-9-insurance {
  height: 1px;
  margin-top: 56px;
  width: 1000px;
}
.load-more-insurance {
  height: 32px;
  left: 897px;
  letter-spacing: 0.20px;
  line-height: 32px;
  mix-blend-mode: normal;
  position: absolute;
  text-align: center;
  top: 556px;
  white-space: nowrap;
  width: 129px;
}
.load-more-1-insurance {
  height: 32px;
  letter-spacing: 0.20px;
  line-height: 32px;
  margin-left: 1.0px;
  margin-top: 29px;
  min-height: 32px;
  min-width: 129px;
  mix-blend-mode: normal;
  text-align: center;
  white-space: nowrap;
  width: 129px;
}
.localphone-insurance {
  align-items: center;
  display: flex;
  height: 20px;
  margin-top: 4.0px;
  mix-blend-mode: normal;
  padding: 0 2px;
  width: 20px;
}
.login-register-insurance {
  height: 40px;
  letter-spacing: 0.40px;
  line-height: 40px;
  margin-left: 6px;
  min-height: 40px;
  min-width: 147px;
  mix-blend-mode: normal;
  white-space: nowrap;
}
.logo-insurance {
  color: var(--cape-cod);
  cursor: pointer;
  font-family: var(--font-family-lato);
  font-size: 24px;
  font-weight: 700;
  height: 32px;
  letter-spacing: 0.20px;
  line-height: 32px;
  min-height: 32px;
  min-width: 71px;
  mix-blend-mode: normal;
  white-space: nowrap;
  width: 71px;
}
.more-information-insurance {
  color: var(--cape-cod);
  font-family: var(--font-family-lato);
  font-size: var(--font-size-xxxs);
  height: 24px;
  letter-spacing: 0.20px;
  line-height: 24px;
  margin-left: 2.0px;
  margin-top: 21px;
  min-height: 24px;
  min-width: 1142px;
  mix-blend-mode: normal;
  text-align: center;
  white-space: nowrap;
  width: 1142px;
}
.overlap-group-insurance {
  height: 628px;
  margin-top: 64px;
  position: relative;
  width: 1920px;
}
.overlap-group1-insurance {
  align-items: flex-end;
  align-self: flex-start;
  background-size: 100% 100%;
  display: flex;
  justify-content: flex-end;
  margin-left: -0.35px;
  min-width: 25px;
}
.overlap-group10-insurance {
  height: 16px;
  position: relative;
  width: 16px;
}
.overlap-group2-insurance {
  align-items: flex-start;
  background-color: var(--cape-cod);
  display: flex;
  height: 50px;
  justify-content: flex-end;
  margin-top: 29px;
  min-width: 1920px;
  padding: 0 386px;
}
.overlap-group3-insurance {
  background-color: var(--gallery);
  height: 250px;
  margin-top: 56px;
  position: relative;
  width: 1140px;
}
.overlap-group4-insurance {
  align-items: center;
  background-color: var(--gallery);
  display: flex;
  height: 250px;
  min-width: 1920px;
  padding: 0 920px;
  position: relative;
}
.overlap-group5-insurance {
  height: 32px;
  margin-left: 140.0px;
  margin-top: 20px;
  position: relative;
  width: 1100px;
}
.overlap-group6-insurance {
  height: 50px;
  position: relative;
  width: 1920px;
}
.overlap-group7-insurance {
  align-items: center;
  background-color: var(--gallery);
  display: flex;
  height: 275px;
  justify-content: flex-end;
  margin-top: 56px;
  min-width: 1920px;
  padding: 0 386px;
  position: relative;
}
.overlap-group8-insurance {
  align-items: center;
  background-color: var(--gallery);
  display: flex;
  height: 300px;
  justify-content: flex-end;
  margin-top: 60px;
  min-width: 1920px;
  padding: 0 726px;
}
.overlap-group9-insurance {
  align-items: flex-end;
  background-size: 100% 100%;
  display: flex;
  height: 14px;
  justify-content: flex-end;
  min-width: 14px;
  padding: 6.7px;
}
.overlap-group9-1-insurance {
  height: 49px;
  position: relative;
  width: 485px;
}
.person-insurance {
  align-items: flex-start;
  display: flex;
  height: 20px;
  margin-left: 35px;
  margin-top: 4.0px;
  mix-blend-mode: normal;
  padding: 3.0px;
  width: 20px;
}
.phone-insurance {
  height: 40px;
  letter-spacing: 0.40px;
  line-height: 40px;
  margin-left: 10px;
  min-height: 40px;
  min-width: 111px;
  mix-blend-mode: normal;
  white-space: nowrap;
}
.popular-insurance {
  left: 878px;
  letter-spacing: 0;
  mix-blend-mode: normal;
  position: absolute;
  text-align: center;
  top: 12px;
  width: 167px;
}
.rectangle-113-insurance {
  height: 40px;
  left: 1149px;
  mix-blend-mode: normal;
  position: absolute;
  top: 0;
  width: 90px;
}
.rectangle-29-insurance {
  background-color: var(--gallery);
  height: 614px;
  left: 0;
  mix-blend-mode: normal;
  position: absolute;
  top: 0;
  width: 1920px;
}
.rectangle-33-insurance {
  height: 40px;
  left: 915px;
  mix-blend-mode: normal;
  position: absolute;
  top: 0;
  width: 90px;
}
.rectangle-33-1-insurance {
  background-color: var(--mist-gray);
  height: 250px;
  left: 1px;
  mix-blend-mode: normal;
  position: absolute;
  top: 0;
  width: 451px;
}
.span-insurance {
  letter-spacing: 0.03px;
}
.text-1-insurance {
  height: 49px;
  left: 155px;
  letter-spacing: 0.40px;
  line-height: 40px;
  mix-blend-mode: normal;
  position: absolute;
  text-align: right;
  top: 0;
  width: 330px;
}
/* ... */

